--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <div class="menu">
     <ul>
       <li><a href="./index.html">Inicio</a></li>
-      <li><a href="#">Puntos Turisticos</a></li>
+      <li><a href="./turismo.html">Puntos Turisticos</a></li>
       <li><a href="#">Sitios de comidas</a></li>
       <li><a href="#">Hospedaje</a></li>
       <li><a href="#">Transporte Publico</a></li>
-      <li><a href="#">Consultas</a></li>
+      <li><a href="http://localhost/register/">Consultas</a></li>
     </ul>
   </div>
 <header>
@@ -68,5 +68,9 @@
       No pierdas detalle de los enfrentamientos, ya que los combates se llevarán a cabo desde las 8 hasta las 20 horas, todos los días. Cada minuto estará cargado de intensidad y habilidad, mientras los competidores luchan por la gloria y el reconocimiento. <br>
     </p>
    </section>
+
+
+
+   
 </body> 
 </html>
