--- a/turismo.html
+++ b/turismo.html
@@ -21,7 +21,7 @@
     <div class="menu">
       <ul>
         <li><a href="./index.html">Inicio</a></li>
-        <li><a href="#">Puntos Turisticos</a></li>
+        <li><a href="./turismo.html">Puntos Turisticos</a></li>
         <li><a href="#">Sitios de comidas</a></li>
         <li><a href="#">Hospedaje</a></li>
         <li><a href="#">Transporte Publico</a></li>
