--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <ul>
       <li><a href="./index.html">Inicio</a></li>
       <li><a href="./turismo.html">Puntos Turisticos</a></li>
-      <li><a href="#">Sitios de comidas</a></li>
-      <li><a href="#">Hospedaje</a></li>
-      <li><a href="#">Transporte Publico</a></li>
+      <li><a href="./comida.html">Sitios de comidas</a></li>
+      <li><a href="./hospedaje.html">Hospedaje</a></li>
+      <li><a href="./bus.html">Transporte Publico</a></li>
       <li><a href="http://localhost/register/">Consultas</a></li>
     </ul>
   </div>
