--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <section class="container-1">
    <p id="T1"></p>
-   <h1 id="T2">Noticias Noticias Noticias </h1>
+   <h1 id="T2">Noticias de la Semana</h1>
    <h3 id="tituloN"> Semana de Intercolegiales</h3>
   </section>
   <section id="noticia">
